# Lib-LDL

./: CMakeLists.txt
LDL/include/LDL/: PimplSz.hpp  Result.hpp
LDL/include/LDL/DOS/: SoftWin.hpp
LDL/include/LDL/UNIX/: GL1Win.hpp
LDL/include/LDL/Windows/: GL1Win.hpp  GL3Win.hpp  SoftWin.hpp
LDL/make/: build.bat
LDL/source/: Conv.cpp  Conv.hpp
LDL/source/Platform/windows/: GL3Win.cpp
LDL/source/Renders/: SoftRndr.cpp
LDL_Image/: test.cpp
demos/Arcanum/: CMakeLists.txt
demos/Fallout/: CMakeLists.txt
examples/Lessons/: CMakeLists.txt
make/: bc6_gl1.bat  bc6_soft.bat  mingw_gl1.bat  mingw_soft.bat  vc5_gl1.bat  vc5_soft.bat  vc6_gl1.bat  vc6_soft.bat
tests/: CMakeLists.txt
